--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ members = ["xtask", "lib/*"]
 authors = ["Johan Planchon <johan@planchon.dev>"]
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license = "MPL-2.0"
+license-file = "LICENSE"
 
 [workspace.dependencies]
 # Cli builder
