--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,3 +1,3 @@
 [toolchain]
 channel = "stable"
-components = [ "rust-src", "rustfmt", "clippy", "rust-analyzer" ]
+components = [ "cargo", "rustc", "rust-src", "rustfmt", "clippy", "rust-analyzer" ]
