--- a/lib/armv6-m/Cargo.toml
+++ b/lib/armv6-m/Cargo.toml
@@ -5,3 +5,6 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+thiserror.workspace = true
+nom.workspace = true
+bitvec.workspace = true
